# rp-backlight-control

./: .gitignore  README.md  meson.build
data/: backlight.ui  meson.build  rp-backlight-control.desktop.in
po/: POTFILES.in  linggen  meson.build  pl.po
src/: backlight.c  brightness.c  brightness.h  meson.build
